# app_store_django

./: README.md  categories_fixture.json  groups.json  products_fixture.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options.py  0003_alter_blog_options.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  header.html
blog/templatetags/: my_tags.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py  create_groups.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_product_owner.py  0004_alter_product_options.py  0005_product_is_published.py  0006_category_slug.py  0007_remove_category_slug.py
catalog/templates/catalog/: base.html  category_products.html  contacts.html  footer.html  header.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
config/: settings.py  urls.py
static/css/: styles.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_avatar_and_more.py  0003_alter_customuser_avatar_alter_customuser_country_and_more.py  0004_customuser_token.py
users/templates/users/: edit_profile.html  login.html  register.html
